fix:修复鼠标位置缓存空值导致的事件命中失败